--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 ################################################################################
 
 /.vs/EnemyModifiers/v15/.suo
+/.vs/FargoEnemyModifiers/v15/.suo
+/.vs/ProjectSettings.json
+/.vs/VSWorkspaceState.json
+/obj/Release/net45/FargoEnemyModifiers.csproj.CoreCompileInputs.cache
+/obj/Release/net45/FargoEnemyModifiers.AssemblyInfoInputs.cache
+/obj/Release/net45/FargoEnemyModifiers.AssemblyInfo.cs
+/obj/Release/net45
+/obj/Debug/net45/FargoEnemyModifiers.csprojAssemblyReference.cache
+/obj/Debug/net45/FargoEnemyModifiers.csproj.CoreCompileInputs.cache
+/obj/Debug/net45/FargoEnemyModifiers.AssemblyInfoInputs.cache
+/obj/Debug/net45/FargoEnemyModifiers.AssemblyInfo.cs
+/obj/Debug/net45
