--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.vs/ProjectSettings.json
 /.vs/VSWorkspaceState.json
 /.vs/slnx.sqlite
+.vs/slnx.sqlite
 /obj/Release/net45/FargoEnemyModifiers.csproj.CoreCompileInputs.cache
 /obj/Release/net45/FargoEnemyModifiers.AssemblyInfoInputs.cache
 /obj/Release/net45/FargoEnemyModifiers.AssemblyInfo.cs
